# synthetic-satellite-pipeline

./: .gitignore  README.md  image_augmentation_utils.ipynb  pyproject.toml  requirements.txt
evaluation/: cloud_mask_generator.py  eval_cloud_obstruction.py  vessel_count_eval.py
models/: object_detection.py  optimized_vessel_detection.py  vae.py
models/context_encoder/: context_encoder.py  modified_context_encoder.py  modified_datasets.py
models/vae/: vae.py
models/wgan_gp/: wgan_gp.py
models/yolov8-n/: object_detection.py  optimized_vessel_detection.py
notebooks/: cloud_generator.ipynb  cv_evaluations.ipynb  eurosat_gan.ipynb  image-augmentation-utils.ipynb  image_augmentation_utils.ipynb  masativ2_testing.ipynb  object_exploration.ipynb  pipeline_overview.ipynb  s2ships-testing.ipynb  seamless-cloning.ipynb  seamless_cloning.ipynb  test_cloud_generator.ipynb  test_pipeline_components.ipynb
src/: basic-augmentation.py  basic_augmentation.py  boat-extraction.py  cloud_generator.py  object_insertion.py  pipeline.py  synthetic_generation.py  train_detection.py
utils/: annotation_converter.py  boat_extraction.py  cloud_generator.py  dataset_creator.py  image_patching.py
